# ACES

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md
backend/app/: README.md  pyproject.toml
backend/app/src/aces_backend/: __init__.py  config.py  main.py
backend/app/src/aces_backend/api/: __init__.py  dependencies.py  router.py  schemas.py
backend/app/src/aces_backend/api/routes/: health.py  matches.py
backend/app/src/aces_backend/cards/: definitions.py  loader.py  source.py
backend/app/src/aces_backend/domain/: __init__.py  factory.py  models.py  repository.py  serialization.py  services.py  sqlite_repository.py
backend/app/src/aces_backend/rules/: __init__.py  combat.py  engine.py
backend/tests/: conftest.py  helpers.py  test_cards.py  test_combat.py  test_health.py  test_match_flow.py  test_matches.py
cards/: base-set.yaml
frontend/web/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/web/src/: App.tsx  index.css
frontend/web/src/api/: client.ts  types.ts
frontend/web/src/components/board/: AircraftCard.tsx  MatchBoard.tsx  PlayerZone.tsx  RunwayCard.tsx
frontend/web/src/components/lobby/: MatchList.tsx
frontend/web/src/components/log/: EventLog.tsx
frontend/web/src/components/phase/: ActionPanel.tsx  PhaseBar.tsx
frontend/web/src/hooks/: useMatch.ts
skills/api-contract-review/: SKILL.md
skills/card-effect-implementation/: SKILL.md
skills/code-review-checklist/: SKILL.md
skills/flutter-screen-polish/: SKILL.md
skills/rules-engine-test-pass/: SKILL.md
